prev next buttons and fix for 5 star overflow display issue

--- a/css/charts.css
+++ b/css/charts.css
@@ -179,6 +179,7 @@
     }
     .band-list label {
       float: left;
+      margin-right: 10px;
       }
     .band-list select {
       background: #333;
@@ -187,6 +188,15 @@
       font-size: 10px;
       color: #fff;
       }
+
+.prev, .next {
+  background: #333;
+  border: none;
+  border-radius: 3px;
+  font-size: 10px;
+  color: #fff;
+  margin-top: 5px;
+}
 
 /* star rating styles */
 .band_rating {
@@ -203,6 +213,7 @@
         margin: 3px 29px 0 0;
         list-style-type: none;
         display: inline-block;
+        overflow: hidden;
         width: 19px;
         height: 29px;
         -webkit-transition-duration: 0.3s;
@@ -210,6 +221,8 @@
         -o-transition-duration: 0.3s;
         transition-duration: 0.3s;
         -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -o-border-radius: 5px;
         }
         .stars:hover {
           margin: 3px -51px 0 0;
